src/test/ui/issues/issue-40510-3.rs
#![allow(unused)]

fn f() {
    let mut x: Vec<()> = Vec::new();

    || {
        || { //~ ERROR captured variable cannot escape `FnMut` closure body
            x.push(())
        }
    };
}


fn main() {}
